--- a/indexes/nsc993/86.md
+++ b/indexes/nsc993/86.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】中国百姓也成了活摘人体器官的刀下鬼](../../pages/nsc993/n13812062.md) 
+#### [祝君安：中共魔教加速解体吧](../../pages/nsc993/n13812072.md) 
 #### [【网海拾贝】“天塌下来也要核酸”](../../pages/nsc993/n13811406.md) 
 #### [火山：老舍投湖到现代知识分子落跑](../../pages/nsc993/n13811414.md) 
 #### [没能熬过酷热，许多老人死在了这个夏天](../../pages/nsc993/n13811366.md) 
@@ -28,8 +30,6 @@
 #### [青萍之末：中共国不是中国](../../pages/nsc993/n13804410.md) 
 #### [李春草：一个中国与两个中共](../../pages/nsc993/n13804404.md) 
 #### [【网海拾贝】在一个号称盛世的时代](../../pages/nsc993/n13803539.md) 
-#### [【网海拾贝】中华民国存在一天，中共政权就是非法的！](../../pages/nsc993/n13802875.md) 
-#### [大数据说话，疫苗有效率严重造假！（三）](../../pages/nsc993/n13802738.md) 
 
 ---
 #### 第 [ [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) / [79](./79.md) ] 页
