have a nice day!

--- a/indexes/nsc1025/210.md
+++ b/indexes/nsc1025/210.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：官方通报唐山打人案 央视报导证其撒谎](../../pages/nsc1025/n13813311.md) 
+#### [吴惠林：勿掉入中共“让利”的陷阱](../../pages/nsc1025/n13813931.md) 
+#### [王友群：王小洪近日讲话透三大信息](../../pages/nsc1025/n13813293.md) 
 #### [【名家专栏】林肯总统给切尼和加兰的教诲](../../pages/nsc1025/n13812195.md) 
 #### [【名家专栏】中共正在摧毁中国的未来](../../pages/nsc1025/n13813135.md) 
 #### [周晓辉：政法主官表态有差异 王小洪之语透信息](../../pages/nsc1025/n13813186.md) 
@@ -27,9 +30,6 @@
 #### [韦拓：司马南出事 中共大五毛寒冬或来临](../../pages/nsc1025/n13809452.md) 
 #### [【有冇搞错】张献忠宝藏出世 “后来治蜀要深思”](../../pages/nsc1025/n13809381.md) 
 #### [王赫：禁用华为5G设备潮 再次涌动](../../pages/nsc1025/n13809702.md) 
-#### [袁斌：如果公共政治课考研名师真移民了……](../../pages/nsc1025/n13809660.md) 
-#### [谢田：美国精英认识到了中共的衰竭](../../pages/nsc1025/n13809658.md) 
-#### [陈思敏：中共低调以对中芯7nm的背后](../../pages/nsc1025/n13809340.md) 
 
 ---
 #### 第 [ [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) ] 页
