--- a/indexes/nsc1025/210.md
+++ b/indexes/nsc1025/210.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：二十大人事或定盘 “改革开放”又消失？](../../pages/nsc1025/n13814154.md) 
+#### [王赫：从卖5斤芹菜被罚6.6万谈中共末路狂奔](../../pages/nsc1025/n13813975.md) 
+#### [王友群：中共替电影《长春》做免费广告](../../pages/nsc1025/n13814067.md) 
+#### [【名家专栏】必须废除《最低工资法》](../../pages/nsc1025/n13813809.md) 
+#### [周晓辉：中共二十大会期确定 释习连任信息](../../pages/nsc1025/n13813934.md) 
+#### [【名家专栏】缺陷重重的《降低通胀法案》(I)](../../pages/nsc1025/n13813807.md) 
 #### [周晓辉：官方通报唐山打人案 央视报导证其撒谎](../../pages/nsc1025/n13813311.md) 
 #### [吴惠林：勿掉入中共“让利”的陷阱](../../pages/nsc1025/n13813931.md) 
 #### [王友群：王小洪近日讲话透三大信息](../../pages/nsc1025/n13813293.md) 
@@ -24,12 +30,6 @@
 #### [杨威：美国连番制裁 继续影响中共二十大](../../pages/nsc1025/n13810387.md) 
 #### [王友群：正告中共司法部长唐一军四件事](../../pages/nsc1025/n13810266.md) 
 #### [【名家专栏】共产主义与第二次世界大战起源](../../pages/nsc1025/n13809918.md) 
-#### [周晓辉：美获新证 俄采购中国无人机涉用于战争](../../pages/nsc1025/n13810279.md) 
-#### [【纪元专栏】疫苗强制令 基于科学还是政治动机？](../../pages/nsc1025/n13810227.md) 
-#### [李明：疫情为何挥之不去？](../../pages/nsc1025/n13810084.md) 
-#### [韦拓：司马南出事 中共大五毛寒冬或来临](../../pages/nsc1025/n13809452.md) 
-#### [【有冇搞错】张献忠宝藏出世 “后来治蜀要深思”](../../pages/nsc1025/n13809381.md) 
-#### [王赫：禁用华为5G设备潮 再次涌动](../../pages/nsc1025/n13809702.md) 
 
 ---
 #### 第 [ [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) ] 页
