--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [袁斌：毛泽东曾获过美国战略情报局的奖金](../../pages/nsc1028/n13814363.md) 
+#### [林彪当年为何反对中共出兵朝鲜？](../../pages/nsc1028/n13813595.md) 
 #### [王友群：马恩列斯毛的子女们](../../pages/nsc1028/n13811048.md) 
 #### [周恩来的狡诈和无情](../../pages/nsc1028/n13810621.md) 
 #### [林辉：“当代牧马人”曲啸演讲骗人 美国行崩溃](../../pages/nsc1028/n13807528.md) 
@@ -28,8 +30,6 @@
 #### [惠虎宇：中共走入“内乱2.0” 灭亡将至](../../pages/nsc1028/n13778194.md) 
 #### [谭笑飞：秦桧、西门庆和中共党员](../../pages/nsc1028/n13778191.md) 
 #### [【名家专栏】所谓的觉醒资本主义是左翼谎言](../../pages/nsc1028/n13777457.md) 
-#### [中共罪行录之八十一：因“破坏交通”获罪的倪匡](../../pages/nsc1028/n13777594.md) 
-#### [【名家专栏】中国的先哲们会鄙视中共所为](../../pages/nsc1028/n13772913.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
