have a nice day!

--- a/indexes/nsc1025/210.md
+++ b/indexes/nsc1025/210.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [颜纯钩：二十大唯小修小补，谁上谁下无关宏旨](../../pages/nsc1025/n13815636.md) 
+#### [【名家专栏】现代环保主义是一种异教吗？](../../pages/nsc1025/n13815457.md) 
+#### [王赫：拜登对习近平最新评价的一种解读](../../pages/nsc1025/n13815228.md) 
+#### [【有冇搞错】二十大“路线是个纲”](../../pages/nsc1025/n13814902.md) 
+#### [周晓辉：戈尔巴乔夫曾道出中国必然走向](../../pages/nsc1025/n13814863.md) 
+#### [【名家专栏】再见吧 所谓的专家](../../pages/nsc1025/n13814593.md) 
 #### [钟原：二十大人事或定盘 “改革开放”又消失？](../../pages/nsc1025/n13814154.md) 
 #### [王赫：从卖5斤芹菜被罚6.6万谈中共末路狂奔](../../pages/nsc1025/n13813975.md) 
 #### [王友群：中共替电影《长春》做免费广告](../../pages/nsc1025/n13814067.md) 
@@ -24,12 +30,6 @@
 #### [王赫：美中6G战 中共难得逞](../../pages/nsc1025/n13811350.md) 
 #### [【名家专栏】艺术会再次繁荣吗？](../../pages/nsc1025/n13811518.md) 
 #### [岳山：中共二十大前王沪宁权势衰减信号](../../pages/nsc1025/n13811464.md) 
-#### [觅真：犯下重罪的司法部唐一军们](../../pages/nsc1025/n13811339.md) 
-#### [【名家专栏】第四次工业革命助台增强军力](../../pages/nsc1025/n13810804.md) 
-#### [周晓辉：中共二十大会期待公布 习出席G20有变数](../../pages/nsc1025/n13810930.md) 
-#### [杨威：美国连番制裁 继续影响中共二十大](../../pages/nsc1025/n13810387.md) 
-#### [王友群：正告中共司法部长唐一军四件事](../../pages/nsc1025/n13810266.md) 
-#### [【名家专栏】共产主义与第二次世界大战起源](../../pages/nsc1025/n13809918.md) 
 
 ---
 #### 第 [ [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) / [203](./203.md) ] 页
