--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [抗战期间中共的统战报纸（1）：宣传、统战、特务“三结合”](../../pages/nsc1028/n13815962.md) 
 #### [袁斌：毛泽东曾获过美国战略情报局的奖金](../../pages/nsc1028/n13814363.md) 
 #### [林彪当年为何反对中共出兵朝鲜？](../../pages/nsc1028/n13813595.md) 
 #### [王友群：马恩列斯毛的子女们](../../pages/nsc1028/n13811048.md) 
@@ -29,7 +30,6 @@
 #### [王友群：上海“政法不倒翁”陈旭倒台之回顾](../../pages/nsc1028/n13778787.md) 
 #### [惠虎宇：中共走入“内乱2.0” 灭亡将至](../../pages/nsc1028/n13778194.md) 
 #### [谭笑飞：秦桧、西门庆和中共党员](../../pages/nsc1028/n13778191.md) 
-#### [【名家专栏】所谓的觉醒资本主义是左翼谎言](../../pages/nsc1028/n13777457.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
