--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [观雨堂主：文革前期红卫兵现象之我见](../../pages/nsc1028/n13816558.md) 
+#### [林辉：国军海军司令率舰队投共 文革被囚怨谁](../../pages/nsc1028/n13816189.md) 
 #### [抗战期间中共的统战报纸（1）：宣传、统战、特务“三结合”](../../pages/nsc1028/n13815962.md) 
 #### [袁斌：毛泽东曾获过美国战略情报局的奖金](../../pages/nsc1028/n13814363.md) 
 #### [林彪当年为何反对中共出兵朝鲜？](../../pages/nsc1028/n13813595.md) 
@@ -28,8 +30,6 @@
 #### [林辉：误信周恩来 南开大学创始人郁郁而终](../../pages/nsc1028/n13786021.md) 
 #### [中共罪行录之八十二：文革中被挖坟辱尸的历史人物](../../pages/nsc1028/n13785139.md) 
 #### [王友群：上海“政法不倒翁”陈旭倒台之回顾](../../pages/nsc1028/n13778787.md) 
-#### [惠虎宇：中共走入“内乱2.0” 灭亡将至](../../pages/nsc1028/n13778194.md) 
-#### [谭笑飞：秦桧、西门庆和中共党员](../../pages/nsc1028/n13778191.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
