--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,10 @@
 ### 纪元评论：自由广场
 ---
+#### [理悟：高智晟，黑夜里的一盏明灯](../../pages/nsc993/n13816672.md) 
+#### [伍新：神枪单闹建国门](../../pages/nsc993/n13816657.md) 
+#### [谢田：劫富济贫为偏颇 劫贫济富近作恶](../../pages/nsc993/n13816650.md) 
+#### [【网海拾贝】中国经济成长已趋近零](../../pages/nsc993/n13816463.md) 
+#### [大数据说话，疫苗有效率严重造假！（六）](../../pages/nsc993/n13816020.md) 
 #### [成都网友“吹哨”被拘 网民：“一个字不对就算谣言”](../../pages/nsc993/n13816016.md) 
 #### [【网海拾贝】这七大谜底，将在中共二十大上揭开](../../pages/nsc993/n13815193.md) 
 #### [郭蒂娅：听见人民的呼声](../../pages/nsc993/n13815063.md) 
@@ -25,11 +30,6 @@
 #### [【网海拾贝】肖建华们都会死在监狱里吗？](../../pages/nsc993/n13807536.md) 
 #### [陆客：由中共的重大发现想到的](../../pages/nsc993/n13807284.md) 
 #### [吐为快：危邦赋](../../pages/nsc993/n13807006.md) 
-#### [【网海拾贝】中共现在处于“自我毁灭状态”](../../pages/nsc993/n13806544.md) 
-#### [云松：哀长江](../../pages/nsc993/n13806519.md) 
-#### [【网海拾贝】上海财政赤字，是明确的经济崩溃信号！](../../pages/nsc993/n13805813.md) 
-#### [郑纯清：“小康”跟“紧日子”的“政治帐”](../../pages/nsc993/n13805792.md) 
-#### [程绍蟾：中元节被抢记](../../pages/nsc993/n13805756.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
