--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [觅真：恶报加身是在兑现天理和警示世人](../../pages/nsc993/n13817153.md) 
+#### [汪志远：四亿人三退真实不虚](../../pages/nsc993/n13817209.md) 
+#### [长风拂泪：开学季，告别英“雄”——写在禁书之后](../../pages/nsc993/n13817147.md) 
 #### [理悟：高智晟，黑夜里的一盏明灯](../../pages/nsc993/n13816672.md) 
 #### [伍新：神枪单闹建国门](../../pages/nsc993/n13816657.md) 
 #### [谢田：劫富济贫为偏颇 劫贫济富近作恶](../../pages/nsc993/n13816650.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】中国搭上了仇恨号失速列车](../../pages/nsc993/n13808946.md) 
 #### [【网海拾贝】北戴河会议后的中共政局——假和谐与半稳定](../../pages/nsc993/n13808238.md) 
 #### [党史专家司马璐破碎的“延安梦”（5）：“为党工作却不被信任”](../../pages/nsc993/n13808233.md) 
-#### [【网海拾贝】肖建华们都会死在监狱里吗？](../../pages/nsc993/n13807536.md) 
-#### [陆客：由中共的重大发现想到的](../../pages/nsc993/n13807284.md) 
-#### [吐为快：危邦赋](../../pages/nsc993/n13807006.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
