--- a/indexes/nsc1025/211.md
+++ b/indexes/nsc1025/211.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【纪元专栏】加国公共教育系统在崩塌](../../pages/nsc1025/n13818000.md) 
+#### [夏林：加拿大人要搬去安省或亚省吗？](../../pages/nsc1025/n13810218.md) 
+#### [【纪元专栏】特鲁多动用《紧急法》背后动机探讨](../../pages/nsc1025/n13815648.md) 
 #### [【名家专栏】警惕左派憎恨川普的狂躁行为](../../pages/nsc1025/n13817217.md) 
 #### [周晓辉：俄外长无签证或缺席联大 北京心忧](../../pages/nsc1025/n13817299.md) 
 #### [川人：封城没完没了，中国人快活不起了？](../../pages/nsc1025/n13817157.md) 
@@ -27,9 +30,6 @@
 #### [王赫：从卖5斤芹菜被罚6.6万谈中共末路狂奔](../../pages/nsc1025/n13813975.md) 
 #### [王友群：中共替电影《长春》做免费广告](../../pages/nsc1025/n13814067.md) 
 #### [【名家专栏】必须废除《最低工资法》](../../pages/nsc1025/n13813809.md) 
-#### [周晓辉：中共二十大会期确定 释习连任信息](../../pages/nsc1025/n13813934.md) 
-#### [【名家专栏】缺陷重重的《降低通胀法案》(I)](../../pages/nsc1025/n13813807.md) 
-#### [周晓辉：官方通报唐山打人案 央视报导证其撒谎](../../pages/nsc1025/n13813311.md) 
 
 ---
 #### 第 [ [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) ] 页
