--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [王友群：“高饶反党联盟”中的高岗自杀之谜](../../pages/nsc1028/n13817482.md) 
+#### [抗战期间中共的统战报纸（2）：拿国民党的钱，办共产党的报](../../pages/nsc1028/n13817421.md) 
 #### [观雨堂主：文革前期红卫兵现象之我见](../../pages/nsc1028/n13816558.md) 
 #### [林辉：国军海军司令率舰队投共 文革被囚怨谁](../../pages/nsc1028/n13816189.md) 
 #### [抗战期间中共的统战报纸（1）：宣传、统战、特务“三结合”](../../pages/nsc1028/n13815962.md) 
@@ -28,8 +30,6 @@
 #### [中共罪行录之八十三：被冤杀的林野夫妇](../../pages/nsc1028/n13789020.md) 
 #### [王友群：毛泽东的笔杆子张春桥被判死缓之回顾](../../pages/nsc1028/n13787500.md) 
 #### [林辉：误信周恩来 南开大学创始人郁郁而终](../../pages/nsc1028/n13786021.md) 
-#### [中共罪行录之八十二：文革中被挖坟辱尸的历史人物](../../pages/nsc1028/n13785139.md) 
-#### [王友群：上海“政法不倒翁”陈旭倒台之回顾](../../pages/nsc1028/n13778787.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
