--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [清荷：中共这个大流氓](../../pages/nsc993/n13817607.md) 
+#### [【网海拾贝】文革也没有这样过，这是人间地狱！](../../pages/nsc993/n13817602.md) 
 #### [觅真：恶报加身是在兑现天理和警示世人](../../pages/nsc993/n13817153.md) 
 #### [汪志远：四亿人三退真实不虚](../../pages/nsc993/n13817209.md) 
 #### [长风拂泪：开学季，告别英“雄”——写在禁书之后](../../pages/nsc993/n13817147.md) 
@@ -28,8 +30,6 @@
 #### [强制赋橙码做核酸 重庆当局被斥“为所欲为”](../../pages/nsc993/n13809680.md) 
 #### [金浴凤：朋友，你是炎黄子孙吗？](../../pages/nsc993/n13808828.md) 
 #### [【网海拾贝】中国搭上了仇恨号失速列车](../../pages/nsc993/n13808946.md) 
-#### [【网海拾贝】北戴河会议后的中共政局——假和谐与半稳定](../../pages/nsc993/n13808238.md) 
-#### [党史专家司马璐破碎的“延安梦”（5）：“为党工作却不被信任”](../../pages/nsc993/n13808233.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
