have a nice day!

--- a/indexes/nsc1025/211.md
+++ b/indexes/nsc1025/211.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】“20法则”和熊市依存的原因](../../pages/nsc1025/n13818548.md) 
+#### [周晓辉：特拉斯将任英首相 中英关系或现巨变](../../pages/nsc1025/n13818028.md) 
+#### [王友群：习近平亲信将掌最高检之分析](../../pages/nsc1025/n13818080.md) 
+#### [夏林：镜头前的戈尔巴乔夫](../../pages/nsc1025/n13818083.md) 
+#### [张菁：巴黎贝甜遭罚 无良保供企业却逍遥](../../pages/nsc1025/n13818011.md) 
+#### [【名家专栏】中共太阳能霸凌行为令世界不安](../../pages/nsc1025/n13817785.md) 
+#### [夏林：股市崩盘吓人？世界首富们破财了吗？](../../pages/nsc1025/n13815640.md) 
 #### [【纪元专栏】加国公共教育系统在崩塌](../../pages/nsc1025/n13818000.md) 
 #### [夏林：加拿大人要搬去安省或亚省吗？](../../pages/nsc1025/n13810218.md) 
 #### [【纪元专栏】特鲁多动用《紧急法》背后动机探讨](../../pages/nsc1025/n13815648.md) 
@@ -23,13 +30,6 @@
 #### [颜纯钩：二十大唯小修小补，谁上谁下无关宏旨](../../pages/nsc1025/n13815636.md) 
 #### [【名家专栏】现代环保主义是一种异教吗？](../../pages/nsc1025/n13815457.md) 
 #### [王赫：拜登对习近平最新评价的一种解读](../../pages/nsc1025/n13815228.md) 
-#### [【有冇搞错】二十大“路线是个纲”](../../pages/nsc1025/n13814902.md) 
-#### [周晓辉：戈尔巴乔夫曾道出中国必然走向](../../pages/nsc1025/n13814863.md) 
-#### [【名家专栏】再见吧 所谓的专家](../../pages/nsc1025/n13814593.md) 
-#### [钟原：二十大人事或定盘 “改革开放”又消失？](../../pages/nsc1025/n13814154.md) 
-#### [王赫：从卖5斤芹菜被罚6.6万谈中共末路狂奔](../../pages/nsc1025/n13813975.md) 
-#### [王友群：中共替电影《长春》做免费广告](../../pages/nsc1025/n13814067.md) 
-#### [【名家专栏】必须废除《最低工资法》](../../pages/nsc1025/n13813809.md) 
 
 ---
 #### 第 [ [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) ] 页
