--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [抗战期间中共的统战报纸（3）：拿资本家的钱，办共产党的报](../../pages/nsc1028/n13818326.md) 
 #### [王友群：“高饶反党联盟”中的高岗自杀之谜](../../pages/nsc1028/n13817482.md) 
 #### [抗战期间中共的统战报纸（2）：拿国民党的钱，办共产党的报](../../pages/nsc1028/n13817421.md) 
 #### [观雨堂主：文革前期红卫兵现象之我见](../../pages/nsc1028/n13816558.md) 
@@ -29,7 +30,6 @@
 #### [古啸：悲惨绝伦 中共摧残女性叙事](../../pages/nsc1028/n13791297.md) 
 #### [中共罪行录之八十三：被冤杀的林野夫妇](../../pages/nsc1028/n13789020.md) 
 #### [王友群：毛泽东的笔杆子张春桥被判死缓之回顾](../../pages/nsc1028/n13787500.md) 
-#### [林辉：误信周恩来 南开大学创始人郁郁而终](../../pages/nsc1028/n13786021.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
