--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】封城没完没了，中国人快活不起了](../../pages/nsc993/n13818367.md) 
+#### [成都，全城静默成了全城“罚站”](../../pages/nsc993/n13818308.md) 
 #### [清荷：中共这个大流氓](../../pages/nsc993/n13817607.md) 
 #### [【网海拾贝】文革也没有这样过，这是人间地狱！](../../pages/nsc993/n13817602.md) 
 #### [觅真：恶报加身是在兑现天理和警示世人](../../pages/nsc993/n13817153.md) 
@@ -28,8 +30,6 @@
 #### [大数据说话，疫苗有效率严重造假！（四）](../../pages/nsc993/n13810534.md) 
 #### [【网海拾贝】摆在中国人面前的只有两条路](../../pages/nsc993/n13809733.md) 
 #### [强制赋橙码做核酸 重庆当局被斥“为所欲为”](../../pages/nsc993/n13809680.md) 
-#### [金浴凤：朋友，你是炎黄子孙吗？](../../pages/nsc993/n13808828.md) 
-#### [【网海拾贝】中国搭上了仇恨号失速列车](../../pages/nsc993/n13808946.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
