--- a/indexes/nsc1025/211.md
+++ b/indexes/nsc1025/211.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】缺陷重重的减少通胀法案（II）](../../pages/nsc1025/n13819340.md) 
+#### [颜丹：未死于病毒的四川人或死于一场地震](../../pages/nsc1025/n13819407.md) 
+#### [陆客：与中国人无关的二十大](../../pages/nsc1025/n13819060.md) 
+#### [王赫：台海形势新阶段 美加速军事联盟重组](../../pages/nsc1025/n13819036.md) 
+#### [钟原：二十大常委之争 赵乐际或成焦点](../../pages/nsc1025/n13818939.md) 
+#### [王友群：美台关系升温的六个表现及原因](../../pages/nsc1025/n13818842.md) 
+#### [周晓辉：不去联大要去中亚  习近平之行透信息](../../pages/nsc1025/n13818746.md) 
 #### [【名家专栏】“20法则”和熊市依存的原因](../../pages/nsc1025/n13818548.md) 
 #### [周晓辉：特拉斯将任英首相 中英关系或现巨变](../../pages/nsc1025/n13818028.md) 
 #### [王友群：习近平亲信将掌最高检之分析](../../pages/nsc1025/n13818080.md) 
@@ -23,13 +30,6 @@
 #### [【名家专栏】中共经济注定行将崩溃吗？](../../pages/nsc1025/n13816213.md) 
 #### [广宇：从互联网产业看中国科技的进步与局限](../../pages/nsc1025/n13815981.md) 
 #### [周晓辉：深圳突取消六个展会 李克强颜面被扫](../../pages/nsc1025/n13815712.md) 
-#### [杨威：中共又参加海参崴军演 何谈民族“复兴”](../../pages/nsc1025/n13815737.md) 
-#### [王赫：“二十大”常委几何？](../../pages/nsc1025/n13815644.md) 
-#### [颜丹：中共选“人民满意的公务员”多可笑](../../pages/nsc1025/n13815680.md) 
-#### [楚一丁：保护堕胎与否之争的是与非](../../pages/nsc1025/n13815642.md) 
-#### [颜纯钩：二十大唯小修小补，谁上谁下无关宏旨](../../pages/nsc1025/n13815636.md) 
-#### [【名家专栏】现代环保主义是一种异教吗？](../../pages/nsc1025/n13815457.md) 
-#### [王赫：拜登对习近平最新评价的一种解读](../../pages/nsc1025/n13815228.md) 
 
 ---
 #### 第 [ [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) / [204](./204.md) ] 页
