--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [英国法轮功学员中秋感恩：无限敬仰李洪志大师](../../pages/nsc993/n13819193.md) 
+#### [成都一母亲哭诉因疫情管控丧子：我儿子是牺牲者](../../pages/nsc993/n13819089.md) 
+#### [王茂俊：香港8.31太子站三周年随感](../../pages/nsc993/n13818741.md) 
 #### [【网海拾贝】封城没完没了，中国人快活不起了](../../pages/nsc993/n13818367.md) 
 #### [成都，全城静默成了全城“罚站”](../../pages/nsc993/n13818308.md) 
 #### [清荷：中共这个大流氓](../../pages/nsc993/n13817607.md) 
@@ -27,9 +30,6 @@
 #### [没能熬过酷热，许多老人死在了这个夏天](../../pages/nsc993/n13811366.md) 
 #### [【网海拾贝】2022年中国魔幻时刻](../../pages/nsc993/n13810635.md) 
 #### [周恩来的狡诈和无情](../../pages/nsc993/n13810621.md) 
-#### [大数据说话，疫苗有效率严重造假！（四）](../../pages/nsc993/n13810534.md) 
-#### [【网海拾贝】摆在中国人面前的只有两条路](../../pages/nsc993/n13809733.md) 
-#### [强制赋橙码做核酸 重庆当局被斥“为所欲为”](../../pages/nsc993/n13809680.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
