--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [大数据说话，疫苗有效率严重造假！（七）](../../pages/nsc993/n13820824.md) 
+#### [【网海拾贝】党媒称中共满意度超90%，为何关闭评论区？](../../pages/nsc993/n13820813.md) 
 #### [【网海拾贝】“每个星期给你们3元，能放过我们吗？”](../../pages/nsc993/n13819989.md) 
 #### [袁斌：关于香港的“司马璐之问”](../../pages/nsc993/n13819975.md) 
 #### [孔诰烽：伟大领袖淹溺在“形势大好”谎言中  世界劝阻无效唯有脱钩](../../pages/nsc993/n13819903.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】有多少人没有熬过这个夏天？](../../pages/nsc993/n13812985.md) 
 #### [乾元：贾浅浅给中国当代诗坛敲响了丧钟](../../pages/nsc993/n13812840.md) 
 #### [【网海拾贝】中国百姓也成了活摘人体器官的刀下鬼](../../pages/nsc993/n13812062.md) 
-#### [祝君安：中共魔教加速解体吧](../../pages/nsc993/n13812072.md) 
-#### [【网海拾贝】“天塌下来也要核酸”](../../pages/nsc993/n13811406.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
