--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之九十：为了所谓的保密杀人灭口](../../pages/nsc1028/n13820793.md) 
 #### [抗战期间中共的统战报纸（4）：拿日汪的钱，办共产党的报](../../pages/nsc1028/n13819107.md) 
 #### [抗战期间中共的统战报纸（3）：拿资本家的钱，办共产党的报](../../pages/nsc1028/n13818326.md) 
 #### [王友群：“高饶反党联盟”中的高岗自杀之谜](../../pages/nsc1028/n13817482.md) 
@@ -29,7 +30,6 @@
 #### [王友群：毛泽东第四任妻子江青自杀之谜](../../pages/nsc1028/n13791949.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（18）](../../pages/nsc1028/n13792132.md) 
 #### [古啸：悲惨绝伦 中共摧残女性叙事](../../pages/nsc1028/n13791297.md) 
-#### [中共罪行录之八十三：被冤杀的林野夫妇](../../pages/nsc1028/n13789020.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
