--- a/indexes/nsc993/87.md
+++ b/indexes/nsc993/87.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [英国法轮功学员耄耋之年得法 无病一身轻](../../pages/nsc993/n13821415.md) 
 #### [大数据说话，疫苗有效率严重造假！（七）](../../pages/nsc993/n13820824.md) 
 #### [【网海拾贝】党媒称中共满意度超90%，为何关闭评论区？](../../pages/nsc993/n13820813.md) 
 #### [【网海拾贝】“每个星期给你们3元，能放过我们吗？”](../../pages/nsc993/n13819989.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】美军刚刚又踩了大红线，中共为什么还不开战？](../../pages/nsc993/n13813604.md) 
 #### [【网海拾贝】有多少人没有熬过这个夏天？](../../pages/nsc993/n13812985.md) 
 #### [乾元：贾浅浅给中国当代诗坛敲响了丧钟](../../pages/nsc993/n13812840.md) 
-#### [【网海拾贝】中国百姓也成了活摘人体器官的刀下鬼](../../pages/nsc993/n13812062.md) 
 
 ---
 #### 第 [ [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) / [80](./80.md) ] 页
