have a nice day!

--- a/indexes/nsc1025/212.md
+++ b/indexes/nsc1025/212.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [王友群：周强是最高法院前腐后继第一责任人](../../pages/nsc1025/n13821952.md) 
+#### [李正宽：中共官员竞相搞清零 向当局交投名状](../../pages/nsc1025/n13822080.md) 
+#### [【名家专栏】中国的“房贷起义”](../../pages/nsc1025/n13821748.md) 
 #### [【名家专栏】缺陷重重的《减少通胀法案》（III）](../../pages/nsc1025/n13820967.md) 
 #### [常态化核酸检测 网民：中共过度防疫已走火入魔](../../pages/nsc1025/n13821413.md) 
 #### [袁斌：动态清零一日不停，百姓遭殃一天不止](../../pages/nsc1025/n13821408.md) 
@@ -27,9 +30,6 @@
 #### [【名家专栏】“20法则”和熊市依存的原因](../../pages/nsc1025/n13818548.md) 
 #### [周晓辉：特拉斯将任英首相 中英关系或现巨变](../../pages/nsc1025/n13818028.md) 
 #### [王友群：习近平亲信将掌最高检之分析](../../pages/nsc1025/n13818080.md) 
-#### [夏林：镜头前的戈尔巴乔夫](../../pages/nsc1025/n13818083.md) 
-#### [张菁：巴黎贝甜遭罚 无良保供企业却逍遥](../../pages/nsc1025/n13818011.md) 
-#### [【名家专栏】中共太阳能霸凌行为令世界不安](../../pages/nsc1025/n13817785.md) 
 
 ---
 #### 第 [ [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) ] 页
