have a nice day!

--- a/indexes/nsc1025/213.md
+++ b/indexes/nsc1025/213.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：中共AI野心遭双重打击](../../pages/nsc1025/n13823910.md) 
+#### [杨宁：甥举报亲舅未做核酸 毒化教育泯灭人性](../../pages/nsc1025/n13824258.md) 
+#### [杨威：会晤普京？习近平处境尴尬](../../pages/nsc1025/n13823655.md) 
+#### [石铭：从中秋节传来的消息看中共迫害法轮功的罪恶](../../pages/nsc1025/n13823517.md) 
 #### [王友群：中共中央政法委书记郭声琨三大罪](../../pages/nsc1025/n13823608.md) 
 #### [【名家专栏】中共利用精神病院折磨异见人士](../../pages/nsc1025/n13823233.md) 
 #### [林辉：二十大再修党章 中共变来变去寡廉鲜耻](../../pages/nsc1025/n13823563.md) 
@@ -26,10 +30,6 @@
 #### [观雨堂主：谈油画《我的前夫》中隐藏的信息](../../pages/nsc1025/n13820499.md) 
 #### [杨威：习近平晋升上将 新军委成员浮现](../../pages/nsc1025/n13820387.md) 
 #### [【名家专栏】中共对国际刑警组织渗透严重](../../pages/nsc1025/n13820132.md) 
-#### [【有冇搞错】政局天崩地裂已经不远](../../pages/nsc1025/n13819619.md) 
-#### [王赫：2022中国之企业艰难](../../pages/nsc1025/n13819941.md) 
-#### [陆客：中国人的行为艺术](../../pages/nsc1025/n13819925.md) 
-#### [周晓辉：胡德平批中研院文章 习失红二代支持](../../pages/nsc1025/n13819486.md) 
 
 ---
-#### 第 [ [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) / [205](./205.md) ] 页
+#### 第 [ [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) ] 页
