--- a/indexes/nsc1028/62.md
+++ b/indexes/nsc1028/62.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [林辉：二十大再修党章 中共变来变去寡廉鲜耻](../../pages/nsc1028/n13823563.md) 
 #### [观雨堂主：谈油画《我的前夫》中隐藏的信息](../../pages/nsc1028/n13820499.md) 
 #### [毛泽东讲的“全国全面内战”是怎么回事？](../../pages/nsc1028/n13821194.md) 
 #### [中共罪行录之九十：为了所谓的保密杀人灭口](../../pages/nsc1028/n13820793.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中共笔杆子范长江“投井自杀”之谜](../../pages/nsc1028/n13796693.md) 
 #### [中共罪行录八十五：恩将仇报的朱德](../../pages/nsc1028/n13798051.md) 
 #### [中共罪行录之八十四：政治保卫局与万人坑](../../pages/nsc1028/n13795320.md) 
-#### [王友群：毛泽东第四任妻子江青自杀之谜](../../pages/nsc1028/n13791949.md) 
 
 ---
 #### 第 [ [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) ] 页
