have a nice day!

--- a/indexes/nsc1025/213.md
+++ b/indexes/nsc1025/213.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】六种糟糕的员工类型](../../pages/nsc1025/n13824975.md) 
+#### [周晓辉：普京陷麻烦 北京转调不提习普会](../../pages/nsc1025/n13825084.md) 
+#### [韦拓：中共二十大人事布局渐显 入常人选受瞩目](../../pages/nsc1025/n13824638.md) 
+#### [钟原：李克强变低调 不再透露经济实情](../../pages/nsc1025/n13824536.md) 
+#### [周晓辉：普京习近平会晤在即 后院皆出状况](../../pages/nsc1025/n13824280.md) 
+#### [【名家专栏】俄乌战争对全球经济的考验](../../pages/nsc1025/n13824072.md) 
+#### [【名家专栏】减免学生贷款只会恶化通货膨胀](../../pages/nsc1025/n13824062.md) 
 #### [王赫：中共AI野心遭双重打击](../../pages/nsc1025/n13823910.md) 
 #### [杨宁：甥举报亲舅未做核酸 毒化教育泯灭人性](../../pages/nsc1025/n13824258.md) 
 #### [杨威：会晤普京？习近平处境尴尬](../../pages/nsc1025/n13823655.md) 
@@ -23,13 +30,6 @@
 #### [钟原：二十大“新战略”为何遭遇“许多”意见](../../pages/nsc1025/n13821294.md) 
 #### [王赫：2027年中国网络安全人员将缺327万？](../../pages/nsc1025/n13821295.md) 
 #### [周晓辉：卫健委出尔反尔涉高层博弈 主任挺习](../../pages/nsc1025/n13821289.md) 
-#### [颜丹：无疫情也要做核酸 中共上演最后的疯狂](../../pages/nsc1025/n13821284.md) 
-#### [【名家专栏】欧洲能源危机的成因是政治干预](../../pages/nsc1025/n13821114.md) 
-#### [谢田：欧洲天然气危机 中共见缝插针](../../pages/nsc1025/n13820784.md) 
-#### [周晓辉：习李清零上有分歧 地方主官表态亦不同](../../pages/nsc1025/n13820455.md) 
-#### [观雨堂主：谈油画《我的前夫》中隐藏的信息](../../pages/nsc1025/n13820499.md) 
-#### [杨威：习近平晋升上将 新军委成员浮现](../../pages/nsc1025/n13820387.md) 
-#### [【名家专栏】中共对国际刑警组织渗透严重](../../pages/nsc1025/n13820132.md) 
 
 ---
 #### 第 [ [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) ] 页
