--- a/indexes/nsc993/88.md
+++ b/indexes/nsc993/88.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [疫情防控算总账，不妨听听李文亮微博下的吐槽](../../pages/nsc993/n13824869.md) 
+#### [李明：中共政权还能存在多久？](../../pages/nsc993/n13824839.md) 
 #### [【网海拾贝】19大修改过党章  二十大为何还要修改？](../../pages/nsc993/n13823963.md) 
 #### [中共罪行录之九十一：“反文革第一人”](../../pages/nsc993/n13823959.md) 
 #### [关乐：红宫宴](../../pages/nsc993/n13823779.md) 
@@ -28,8 +30,6 @@
 #### [长风拂泪：开学季，告别英“雄”——写在禁书之后](../../pages/nsc993/n13817147.md) 
 #### [理悟：高智晟，黑夜里的一盏明灯](../../pages/nsc993/n13816672.md) 
 #### [伍新：神枪单闹建国门](../../pages/nsc993/n13816657.md) 
-#### [谢田：劫富济贫为偏颇 劫贫济富近作恶](../../pages/nsc993/n13816650.md) 
-#### [【网海拾贝】中国经济成长已趋近零](../../pages/nsc993/n13816463.md) 
 
 ---
 #### 第 [ [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) ] 页
