--- a/indexes/nsc993/88.md
+++ b/indexes/nsc993/88.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [朱莉娅：福分送到心坎 慈悲善念感化大陆男士退团](../../pages/nsc993/n13825516.md) 
+#### [铃兰：嫦娥也得做核酸？](../../pages/nsc993/n13825352.md) 
+#### [华颇：习近平为何此时出访中亚](../../pages/nsc993/n13825178.md) 
+#### [【网海拾贝】在党国逻辑下，我们的悲伤无处安放](../../pages/nsc993/n13824891.md) 
 #### [疫情防控算总账，不妨听听李文亮微博下的吐槽](../../pages/nsc993/n13824869.md) 
 #### [李明：中共政权还能存在多久？](../../pages/nsc993/n13824839.md) 
 #### [【网海拾贝】19大修改过党章  二十大为何还要修改？](../../pages/nsc993/n13823963.md) 
@@ -26,10 +30,6 @@
 #### [清荷：中共这个大流氓](../../pages/nsc993/n13817607.md) 
 #### [【网海拾贝】文革也没有这样过，这是人间地狱！](../../pages/nsc993/n13817602.md) 
 #### [觅真：恶报加身是在兑现天理和警示世人](../../pages/nsc993/n13817153.md) 
-#### [汪志远：四亿人三退真实不虚](../../pages/nsc993/n13817209.md) 
-#### [长风拂泪：开学季，告别英“雄”——写在禁书之后](../../pages/nsc993/n13817147.md) 
-#### [理悟：高智晟，黑夜里的一盏明灯](../../pages/nsc993/n13816672.md) 
-#### [伍新：神枪单闹建国门](../../pages/nsc993/n13816657.md) 
 
 ---
 #### 第 [ [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) ] 页
