have a nice day!

--- a/indexes/nsc1025/213.md
+++ b/indexes/nsc1025/213.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【时事金扫描】天津要封城？拉萨变鬼城](../../pages/nsc1025/n13827171.md) 
+#### [王友群：二十大前盘点近年清洗的公安厅局官员](../../pages/nsc1025/n13826943.md) 
+#### [项云：不可小觑中共的欺骗性](../../pages/nsc1025/n13827056.md) 
+#### [王赫：《台湾政策法》的立法前景](../../pages/nsc1025/n13826910.md) 
+#### [周晓辉：普习会多个细节透信息](../../pages/nsc1025/n13826836.md) 
+#### [【名家专栏】来自中共南太平洋战略的挑战](../../pages/nsc1025/n13826594.md) 
+#### [杨宁：习近平缺席上合峰会晚宴 怕感染病毒？](../../pages/nsc1025/n13826822.md) 
 #### [颜丹：谭德塞喊“胜利在望” 北京情何以堪](../../pages/nsc1025/n13826809.md) 
 #### [谢田：英国王室起伏跌宕 启迪人类贤德之治](../../pages/nsc1025/n13826363.md) 
 #### [王友群：中共二十大前的善恶大抉择](../../pages/nsc1025/n13826020.md) 
@@ -23,13 +30,6 @@
 #### [杨宁：甥举报亲舅未做核酸 毒化教育泯灭人性](../../pages/nsc1025/n13824258.md) 
 #### [杨威：会晤普京？习近平处境尴尬](../../pages/nsc1025/n13823655.md) 
 #### [石铭：从中秋节传来的消息看中共迫害法轮功的罪恶](../../pages/nsc1025/n13823517.md) 
-#### [王友群：中共中央政法委书记郭声琨三大罪](../../pages/nsc1025/n13823608.md) 
-#### [【名家专栏】中共利用精神病院折磨异见人士](../../pages/nsc1025/n13823233.md) 
-#### [林辉：二十大再修党章 中共变来变去寡廉鲜耻](../../pages/nsc1025/n13823563.md) 
-#### [颜丹：晚会上的“台湾元素”难掩中共的恐惧](../../pages/nsc1025/n13823405.md) 
-#### [【名家专栏】中国经济灾难对市场的影响 ](../../pages/nsc1025/n13822578.md) 
-#### [吴惠林：工资调涨，谁受害？](../../pages/nsc1025/n13823500.md) 
-#### [周晓辉：俄乌战争形势逆转 习送大礼后果如何 ？](../../pages/nsc1025/n13823057.md) 
 
 ---
 #### 第 [ [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) / [206](./206.md) ] 页
