--- a/indexes/nsc993/88.md
+++ b/indexes/nsc993/88.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平为何“御驾亲征”上海合作组织峰会？](../../pages/nsc993/n13827067.md) 
+#### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（下）](../../pages/nsc993/n13827048.md) 
 #### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（上）](../../pages/nsc993/n13826374.md) 
 #### [【网海拾贝】疫情让中共把对人民的监控推向极致](../../pages/nsc993/n13826354.md) 
 #### [谭德塞称结束疫情胜利在望 网友嘲讽中共](../../pages/nsc993/n13825977.md) 
@@ -28,8 +30,6 @@
 #### [英国法轮功学员中秋感恩：无限敬仰李洪志大师](../../pages/nsc993/n13819193.md) 
 #### [成都一母亲哭诉因疫情管控丧子：我儿子是牺牲者](../../pages/nsc993/n13819089.md) 
 #### [王茂俊：香港8.31太子站三周年随感](../../pages/nsc993/n13818741.md) 
-#### [【网海拾贝】封城没完没了，中国人快活不起了](../../pages/nsc993/n13818367.md) 
-#### [成都，全城静默成了全城“罚站”](../../pages/nsc993/n13818308.md) 
 
 ---
 #### 第 [ [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) ] 页
