have a nice day!

--- a/indexes/nsc993/88.md
+++ b/indexes/nsc993/88.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】习近平中亚行为何匆匆提前返京？](../../pages/nsc993/n13827492.md) 
+#### [韩笑：中共无神论蒙骗百姓 大陆男子明真相当即退团](../../pages/nsc993/n13827466.md) 
 #### [【网海拾贝】习近平为何“御驾亲征”上海合作组织峰会？](../../pages/nsc993/n13827067.md) 
 #### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（下）](../../pages/nsc993/n13827048.md) 
 #### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（上）](../../pages/nsc993/n13826374.md) 
@@ -28,8 +30,6 @@
 #### [孔诰烽：伟大领袖淹溺在“形势大好”谎言中  世界劝阻无效唯有脱钩](../../pages/nsc993/n13819903.md) 
 #### [颜纯钩：从龙应台著作被禁到香港去殖民化还有多远？](../../pages/nsc993/n13819829.md) 
 #### [英国法轮功学员中秋感恩：无限敬仰李洪志大师](../../pages/nsc993/n13819193.md) 
-#### [成都一母亲哭诉因疫情管控丧子：我儿子是牺牲者](../../pages/nsc993/n13819089.md) 
-#### [王茂俊：香港8.31太子站三周年随感](../../pages/nsc993/n13818741.md) 
 
 ---
 #### 第 [ [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) ] 页
