have a nice day!

--- a/indexes/nsc1028/63.md
+++ b/indexes/nsc1028/63.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [听党史专家司马璐揭秘中共（2）：最早传播马克思主义的是谁](../../pages/nsc1028/n13828110.md) 
 #### [王友群：香港民航客机被击落事件之回顾](../../pages/nsc1028/n13827378.md) 
 #### [张菁：为中共签秘密协议 红色特工武志平人生悲催](../../pages/nsc1028/n13827761.md) 
 #### [听党史专家司马璐揭秘中共（1）：被中共埋葬的历史真相](../../pages/nsc1028/n13827490.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之八十九：“苏区”百姓的劫难](../../pages/nsc1028/n13801773.md) 
 #### [林辉：叶剑英前妻危拱之整风时自杀 晚年凄惨](../../pages/nsc1028/n13801239.md) 
 #### [中共罪行录之八十八：周恩来整龚楚](../../pages/nsc1028/n13800972.md) 
-#### [中共罪行录之八十七：红色恐怖和白色恐怖](../../pages/nsc1028/n13800183.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
