--- a/indexes/nsc1025/214.md
+++ b/indexes/nsc1025/214.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】拜登的生物技术新政策](../../pages/nsc1025/n13828316.md) 
+#### [杨宁：面对贵州27个冤魂 中南海集体沉默](../../pages/nsc1025/n13828296.md) 
+#### [颜丹：谁该为贵州大巴侧翻事件负责？](../../pages/nsc1025/n13828214.md) 
+#### [觅真：加重迫害凸显了中共的末日疯狂](../../pages/nsc1025/n13828100.md) 
+#### [周晓辉：习回国当日长沙起大火 蓄意还是巧合？](../../pages/nsc1025/n13827766.md) 
+#### [岳山：中共二十大高层人事名单预判](../../pages/nsc1025/n13827548.md) 
 #### [【名家专栏】中共利用拜登演讲扩大美国分歧](../../pages/nsc1025/n13827609.md) 
 #### [杨威：中共图谋中亚地区却未展现领导力](../../pages/nsc1025/n13827382.md) 
 #### [【名家专栏】不遵守美审计规则 中国公司或退市](../../pages/nsc1025/n13827189.md) 
@@ -24,12 +30,6 @@
 #### [乾元：从香港人排队几小时吊唁女王说起](../../pages/nsc1025/n13825336.md) 
 #### [【名家专栏】六种糟糕的员工类型](../../pages/nsc1025/n13824975.md) 
 #### [周晓辉：普京陷麻烦 北京转调不提习普会](../../pages/nsc1025/n13825084.md) 
-#### [韦拓：中共二十大人事布局渐显 入常人选受瞩目](../../pages/nsc1025/n13824638.md) 
-#### [钟原：李克强变低调 不再透露经济实情](../../pages/nsc1025/n13824536.md) 
-#### [周晓辉：普京习近平会晤在即 后院皆出状况](../../pages/nsc1025/n13824280.md) 
-#### [【名家专栏】俄乌战争对全球经济的考验](../../pages/nsc1025/n13824072.md) 
-#### [【名家专栏】减免学生贷款只会恶化通货膨胀](../../pages/nsc1025/n13824062.md) 
-#### [王赫：中共AI野心遭双重打击](../../pages/nsc1025/n13823910.md) 
 
 ---
 #### 第 [ [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) ] 页
