--- a/indexes/nsc1025/214.md
+++ b/indexes/nsc1025/214.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：美国与中共在南太平洋激烈较量](../../pages/nsc1025/n13829445.md) 
+#### [钟原：中共颁“能上能下”新规 谁会倒楣？](../../pages/nsc1025/n13829244.md) 
 #### [【名家专栏】北京新一轮刺激恐难挽经济颓势](../../pages/nsc1025/n13828954.md) 
 #### [夏林：多伦多的热闹又回来了](../../pages/nsc1025/n13829144.md) 
 #### [周晓辉：旧规重发删重要条款 习连任获常委认可？](../../pages/nsc1025/n13829011.md) 
@@ -28,8 +30,6 @@
 #### [王友群：中共二十大前的善恶大抉择](../../pages/nsc1025/n13826020.md) 
 #### [钟原：习近平普京相挺各留一手 裂痕似隐现](../../pages/nsc1025/n13826171.md) 
 #### [【名家专栏】美国将军对中共超限战的解读](../../pages/nsc1025/n13825825.md) 
-#### [韦拓：“闭关锁国”文引发二十大后批邓猜测](../../pages/nsc1025/n13825527.md) 
-#### [【纪元专栏】觉醒意识形态，成校园毒丸](../../pages/nsc1025/n13825850.md) 
 
 ---
 #### 第 [ [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) ] 页
