--- a/indexes/nsc993/89.md
+++ b/indexes/nsc993/89.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [韩笑：共产党已到穷途末路 韩女士四劝善良人远离它](../../pages/nsc993/n13829505.md) 
+#### [贵阳大巴事故中的逝者与生者](../../pages/nsc993/n13829479.md) 
 #### [宋征时：中共二十大代表周洪许的民间档案（二）](../../pages/nsc993/n13829077.md) 
 #### [【网海拾贝】贵州大巴侧翻，相当于多少人感染新冠？](../../pages/nsc993/n13828801.md) 
 #### [听党史专家司马璐揭秘中共（3）：中共之外的共产党](../../pages/nsc993/n13828746.md) 
@@ -28,8 +30,6 @@
 #### [关乐：红宫宴](../../pages/nsc993/n13823779.md) 
 #### [云松：清平乐 红朝防疫](../../pages/nsc993/n13823760.md) 
 #### [【网海拾贝】1000天前和1000天后与100天前和100天后](../../pages/nsc993/n13823090.md) 
-#### [韩笑：退党洪流滚滚向前 大陆男声言不再与邪恶为伍  ](../../pages/nsc993/n13823029.md) 
-#### [“伊犁封城40天了，没人管我们老百姓的死活”](../../pages/nsc993/n13822781.md) 
 
 ---
-#### 第 [ [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) / [81](./81.md) ] 页
+#### 第 [ [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) ] 页
