--- a/indexes/nsc1025/215.md
+++ b/indexes/nsc1025/215.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：傅政华孙力军露脸受审 唐山凶手不露有鬼](../../pages/nsc1025/n13831361.md) 
+#### [王赫：2022中共与国际金融资本走进十字路口？](../../pages/nsc1025/n13831097.md) 
+#### [杨威：中共领导人为何缺席联合国大会](../../pages/nsc1025/n13830895.md) 
+#### [乾元：“十户长”是极端户籍管理的再版](../../pages/nsc1025/n13830892.md) 
 #### [沈舟：俄军衰落 中共变世界军力第二？（下）](../../pages/nsc1025/n13830635.md) 
 #### [【名家专栏】中共治下的严重货币危机](../../pages/nsc1025/n13830462.md) 
 #### [周晓辉：军方研讨会现蹊跷 宋平发声不简单](../../pages/nsc1025/n13830726.md) 
@@ -26,10 +30,6 @@
 #### [颜丹：谁该为贵州大巴侧翻事件负责？](../../pages/nsc1025/n13828214.md) 
 #### [觅真：加重迫害凸显了中共的末日疯狂](../../pages/nsc1025/n13828100.md) 
 #### [周晓辉：习回国当日长沙起大火 蓄意还是巧合？](../../pages/nsc1025/n13827766.md) 
-#### [岳山：中共二十大高层人事名单预判](../../pages/nsc1025/n13827548.md) 
-#### [【名家专栏】中共利用拜登演讲扩大美国分歧](../../pages/nsc1025/n13827609.md) 
-#### [杨威：中共图谋中亚地区却未展现领导力](../../pages/nsc1025/n13827382.md) 
-#### [【名家专栏】不遵守美审计规则 中国公司或退市](../../pages/nsc1025/n13827189.md) 
 
 ---
-#### 第 [ [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) / [207](./207.md) ] 页
+#### 第 [ [215](./215.md) / [214](./214.md) / [213](./213.md) / [212](./212.md) / [211](./211.md) / [210](./210.md) / [209](./209.md) / [208](./208.md) ] 页
