--- a/indexes/nsc1028/63.md
+++ b/indexes/nsc1028/63.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [听党史专家司马璐揭秘中共（5）：一大上的毛泽东](../../pages/nsc1028/n13831107.md) 
 #### [听党史专家司马璐揭秘中共（4）：中共成立于何时](../../pages/nsc1028/n13830200.md) 
 #### [听党史专家司马璐揭秘中共（2）：最早传播马克思主义的是谁](../../pages/nsc1028/n13828110.md) 
 #### [王友群：香港民航客机被击落事件之回顾](../../pages/nsc1028/n13827378.md) 
@@ -29,7 +30,6 @@
 #### [林辉：大饥荒时上书中南海 两位年轻人遭判刑](../../pages/nsc1028/n13803206.md) 
 #### [王友群：中央文革小组十名成员的牢狱之灾](../../pages/nsc1028/n13801415.md) 
 #### [中共罪行录之八十九：“苏区”百姓的劫难](../../pages/nsc1028/n13801773.md) 
-#### [林辉：叶剑英前妻危拱之整风时自杀 晚年凄惨](../../pages/nsc1028/n13801239.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
