--- a/indexes/nsc1035/55.md
+++ b/indexes/nsc1035/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [耿和：7355个子弹壳象征被撕碎的心](../../pages/nsc1035/n13830612.md) 
 #### [吕千荣：中秋夜 是谁撕残了圆月](../../pages/nsc1035/n13824365.md) 
 #### [英国法轮功学员耄耋之年得法 无病一身轻](../../pages/nsc1035/n13821415.md) 
 #### [觅真：请关注这些月圆家难圆的家庭](../../pages/nsc1035/n13817374.md) 
@@ -29,7 +30,6 @@
 #### [禾雨：镌刻在心里的画](../../pages/nsc1035/n13737937.md) 
 #### [谢卫国：大法缘牵三十载](../../pages/nsc1035/n13737872.md) 
 #### [李正宽：法轮大法洪传与中华五千文明背后的深意](../../pages/nsc1035/n13736203.md) 
-#### [杨颖宇：法轮功洪传三十周年有感](../../pages/nsc1035/n13734884.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
