--- a/indexes/nsc1035/55.md
+++ b/indexes/nsc1035/55.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [《演员梦》影评：人生如戏，于黑暗深处寻找光的故事](../../pages/nsc1035/n13832182.md) 
 #### [诸葛五郎：重阳节，中国多少老人度日如年以泪洗脸](../../pages/nsc1035/n13831696.md) 
 #### [耿和：7355个子弹壳象征被撕碎的心](../../pages/nsc1035/n13830612.md) 
 #### [吕千荣：中秋夜 是谁撕残了圆月](../../pages/nsc1035/n13824365.md) 
@@ -29,7 +30,6 @@
 #### [小天：如何从疫情的牢笼中走出？](../../pages/nsc1035/n13744630.md) 
 #### [项云：“清零”是夯实专政维稳工具和手段，病毒是借口和机会](../../pages/nsc1035/n13737954.md) 
 #### [禾雨：镌刻在心里的画](../../pages/nsc1035/n13737937.md) 
-#### [谢卫国：大法缘牵三十载](../../pages/nsc1035/n13737872.md) 
 
 ---
 #### 第 [ [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) ] 页
