--- a/indexes/nsc993/89.md
+++ b/indexes/nsc993/89.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】谁再为中共卖命，傅政华就是他们的下场](../../pages/nsc993/n13832159.md) 
+#### [伍新： 从“枪决子弹费”到“清零隔离费”](../../pages/nsc993/n13832340.md) 
 #### [颜纯钩：亡命天涯心系香港，离散如水坚强如钢](../../pages/nsc993/n13831835.md) 
 #### [宇尘：台湾何时能与大陆统一](../../pages/nsc993/n13831781.md) 
 #### [一位市民的亲历：贵阳疫情防控管理有多乱](../../pages/nsc993/n13831721.md) 
@@ -28,8 +30,6 @@
 #### [韩笑：中共无神论蒙骗百姓 大陆男子明真相当即退团](../../pages/nsc993/n13827466.md) 
 #### [【网海拾贝】习近平为何“御驾亲征”上海合作组织峰会？](../../pages/nsc993/n13827067.md) 
 #### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（下）](../../pages/nsc993/n13827048.md) 
-#### [韩笑：大陆女士抛弃对中共幻想 退队远离邪恶（上）](../../pages/nsc993/n13826374.md) 
-#### [【网海拾贝】疫情让中共把对人民的监控推向极致](../../pages/nsc993/n13826354.md) 
 
 ---
 #### 第 [ [89](./89.md) / [88](./88.md) / [87](./87.md) / [86](./86.md) / [85](./85.md) / [84](./84.md) / [83](./83.md) / [82](./82.md) ] 页
